--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react-dom": "^17.0.7",
     "axios": "^0.21.1",
     "bootstrap": "^3.4.1",
-    "js-cookies": "^1.0.4",
+    "js-cookie": "^2.2.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
     "@types/react-router": "^5.1.15",
     "@types/react-router-dom": "^5.1.7"
   }
